versions/20.2.0/stencil/components/icon/readme.md
# limel-icon



<!-- Auto Generated Below -->


## Properties

| Property | Attribute | Description                                                                                                            | Type                                          | Default     |
| -------- | --------- | ---------------------------------------------------------------------------------------------------------------------- | --------------------------------------------- | ----------- |
| `badge`  | `badge`   | Set to `true` to give the icon a round background with some padding. Only works when the `size` attribute is also set. | `boolean`                                     | `undefined` |
| `name`   | `name`    | Name of the icon                                                                                                       | `string`                                      | `undefined` |
| `size`   | `size`    | Size of the icon                                                                                                       | `"large" \| "medium" \| "small" \| "x-small"` | `undefined` |


----------------------------------------------

*Built with [StencilJS](https://stenciljs.com/)*
