versions/24.5.1/stencil/components/icon/readme.md
# limel-icon



<!-- Auto Generated Below -->


## Properties

| Property | Attribute | Description                                                                                                            | Type                                          | Default     |
| -------- | --------- | ---------------------------------------------------------------------------------------------------------------------- | --------------------------------------------- | ----------- |
| `badge`  | `badge`   | Set to `true` to give the icon a round background with some padding. Only works when the `size` attribute is also set. | `boolean`                                     | `undefined` |
| `name`   | `name`    | Name of the icon                                                                                                       | `string`                                      | `undefined` |
| `size`   | `size`    | Size of the icon                                                                                                       | `"large" \| "medium" \| "small" \| "x-small"` | `undefined` |


## Dependencies

### Used by

 - [limel-banner](../banner)
 - [limel-button](../button)
 - [limel-chip-set](../chip-set)
 - [limel-dialog](../dialog)
 - [limel-example-icon](../../examples/icon)
 - [limel-example-icon-background](../../examples/icon)
 - [limel-example-select-dialog](../../examples/select)
 - [limel-icon-button](../icon-button)
 - [limel-input-field](../input-field)

### Graph
```mermaid
graph TD;
  limel-banner --> limel-icon
  limel-button --> limel-icon
  limel-chip-set --> limel-icon
  limel-dialog --> limel-icon
  limel-example-icon --> limel-icon
  limel-example-icon-background --> limel-icon
  limel-example-select-dialog --> limel-icon
  limel-icon-button --> limel-icon
  limel-input-field --> limel-icon
  style limel-icon fill:#f9f,stroke:#333,stroke-width:4px
```

----------------------------------------------

*Built with [StencilJS](https://stenciljs.com/)*
